<resources>
    <string name="app_name">MyNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--    <string name="action_search_icon">Search</string>-->
    <string name="action_cart_icon">Cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_order">Order</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_support">Support</string>

    <string-array name="merchant">
        <item>Merchant 1</item>
        <item>Merchant 2</item>
        <item>Merchant 3</item>
        <item>Merchant 4</item>
        <item>Merchant 5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>