<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mynavactivity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.mynavactivity.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.mynavactivity.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.mynavactivity.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>